# VectorAdam

./: .gitignore  README.md  environments.yml  pyproject.toml  util.py  vectoradam.py
demo/: laplacian2d_demo.ipynb  laplacian2d_demo.py
src/vectoradam/: __init__.py  optimizer.py  util.py
